Adjust template to cleanup errors